[gd_scene load_steps=5 format=3 uid="uid://cf56c8p7lrwo"]

[ext_resource type="Texture2D" uid="uid://b28wwbume1cgm" path="res://Sprites/UI/Panel Container Texture/PanelTexture.png" id="1_eq3fd"]
[ext_resource type="Script" uid="uid://ndyl877gswdb" path="res://Scripts/UI/AbilityTooltip.gd" id="1_s80h0"]
[ext_resource type="Texture2D" uid="uid://dsgcy2jeaik3y" path="res://Sprites/UI/Slot Border/SlotBorder.png" id="3_rdsqw"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gqdvg"]
texture = ExtResource("1_eq3fd")
texture_margin_left = 24.0
texture_margin_top = 24.0
texture_margin_right = 24.0
texture_margin_bottom = 24.0

[node name="AbilityTooltip" type="PanelContainer"]
custom_minimum_size = Vector2(600, 300)
offset_right = 600.0
offset_bottom = 368.0
script = ExtResource("1_s80h0")

[node name="AbilityTooltipContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(600, 300)
layout_mode = 2

[node name="AbilityTooltipBodyContainer" type="PanelContainer" parent="AbilityTooltipContainer"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_gqdvg")

[node name="VBoxContainer" type="VBoxContainer" parent="AbilityTooltipContainer/AbilityTooltipBodyContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="AbilityTooltipContainer/AbilityTooltipBodyContainer/VBoxContainer"]
layout_mode = 2

[node name="AbilityIconBorder" type="TextureRect" parent="AbilityTooltipContainer/AbilityTooltipBodyContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("3_rdsqw")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="AbilityTooltipContainer/AbilityTooltipBodyContainer/VBoxContainer/HBoxContainer/AbilityIconBorder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="AbilityIcon" type="TextureRect" parent="AbilityTooltipContainer/AbilityTooltipBodyContainer/VBoxContainer/HBoxContainer/AbilityIconBorder/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="AbilityTooltipContainer/AbilityTooltipBodyContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="AbilityName" type="RichTextLabel" parent="AbilityTooltipContainer/AbilityTooltipBodyContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 3
text = "Ability Name"
vertical_alignment = 1

[node name="AbilityTypeLabel" type="RichTextLabel" parent="AbilityTooltipContainer/AbilityTooltipBodyContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "ABILITY TYPE"
vertical_alignment = 1

[node name="ResourceCost" type="RichTextLabel" parent="AbilityTooltipContainer/AbilityTooltipBodyContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "Resource Cost"
vertical_alignment = 1

[node name="CooldownTime" type="RichTextLabel" parent="AbilityTooltipContainer/AbilityTooltipBodyContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "Cooldown"
vertical_alignment = 1

[node name="AbilityDescription" type="RichTextLabel" parent="AbilityTooltipContainer/AbilityTooltipBodyContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
text = "ABILITY DETAILS"
fit_content = true

[node name="AbilityStatsContainer" type="HBoxContainer" parent="AbilityTooltipContainer/AbilityTooltipBodyContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 100)
layout_mode = 2

[node name="StatNameContainer" type="VBoxContainer" parent="AbilityTooltipContainer/AbilityTooltipBodyContainer/VBoxContainer/AbilityStatsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="StatValueContainer" type="VBoxContainer" parent="AbilityTooltipContainer/AbilityTooltipBodyContainer/VBoxContainer/AbilityStatsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
